--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,10 @@ h4:hover {
         display: none;
     }
 
+    header li::after {
+        bottom: -0.8em;
+    }
+
     .box-1,
     .box-2 {
         width: 50%;
